# pofile

./: README.md  allpackages.txt  setup.cfg
demo/: 1、批量修改文件（文件夹）.py  get_files_demo.py  清除磁盘数据.py
dev/: clean4disk_test.py  replace4name.py  zip4file_dev.py
dev/diff_com/: test.py
dev/test/: delfile.py
pofile/: __init__.py
pofile/api/: file.py  filename.py
pofile/core/: FileType.py
script/: allpackages.txt  clean.sh
tests/: __init__.py  test_file.py
tests/test_files/: __init__.py  本目录文件列表.xlsx
tests/test_files/file/: __init__.py
tests/test_files/file/add_fix/: __init__.py
