[metadata]
name = pofile
version = 0.1.1
description = pip install pofile
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.python-office.com/
author = CoderWanFeng
author_email = 1957875073@qq.com
license = MIT
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/pofile/issues
    Documentation = https://github.com/CoderWanFeng/pofile/blob/master/README.md
    Source Code = https://github.com/CoderWanFeng/pofile

[options]
packages = find:
install_requires =
    openpyxl
    poprogress
python_requires = >=3.6
include_package_data = True
zip_safe = False

